# ACSL-flightstack-winged

./: .gitignore  .gitmodules  LICENSE  README.md
documentation_winged/: config_file
documentation_winged/html/: CONTRIBUTING_8md.html  MRAC__OMEGA_8cpp.html  MRAC__OMEGA_8cpp__incl.map  MRAC__OMEGA_8cpp__incl.md5  MRAC__OMEGA_8cpp_source.html  MRAC__OMEGA_8hpp.html  MRAC__OMEGA_8hpp__dep__incl.map  MRAC__OMEGA_8hpp__dep__incl.md5  MRAC__OMEGA_8hpp__incl.map  MRAC__OMEGA_8hpp__incl.md5  MRAC__OMEGA_8hpp_source.html  MRAC__OMEGA__logger_8cpp.html  MRAC__OMEGA__logger_8cpp__incl.map  MRAC__OMEGA__logger_8cpp__incl.md5  MRAC__OMEGA__logger_8cpp_source.html  MRAC__OMEGA__logger_8hpp.html  MRAC__OMEGA__logger_8hpp__dep__incl.map  MRAC__OMEGA__logger_8hpp__dep__incl.md5  MRAC__OMEGA__logger_8hpp__incl.map  MRAC__OMEGA__logger_8hpp__incl.md5  MRAC__OMEGA__logger_8hpp_source.html  MRAC__OMEGA__members_8hpp.html  MRAC__OMEGA__members_8hpp__dep__incl.map  MRAC__OMEGA__members_8hpp__dep__incl.md5  MRAC__OMEGA__members_8hpp__incl.map  MRAC__OMEGA__members_8hpp__incl.md5  MRAC__OMEGA__members_8hpp_source.html  MRAC__PID_8cpp.html  MRAC__PID_8cpp__incl.map  MRAC__PID_8cpp__incl.md5  MRAC__PID_8cpp_source.html  MRAC__PID_8hpp.html  MRAC__PID_8hpp__dep__incl.map  MRAC__PID_8hpp__dep__incl.md5  MRAC__PID_8hpp__incl.map  MRAC__PID_8hpp__incl.md5  MRAC__PID_8hpp_source.html  MRAC__PID__logger_8cpp.html  MRAC__PID__logger_8cpp__incl.map  MRAC__PID__logger_8cpp__incl.md5  (+904 more)
documentation_winged/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  defines_0.js  (+82 more)
documentation_winged/latex/: CONTRIBUTING_8md.tex  MRAC__OMEGA_8cpp.tex  MRAC__OMEGA_8cpp__incl.md5  MRAC__OMEGA_8hpp.tex  MRAC__OMEGA_8hpp__dep__incl.md5  MRAC__OMEGA_8hpp__incl.md5  MRAC__OMEGA__logger_8cpp.tex  MRAC__OMEGA__logger_8cpp__incl.md5  MRAC__OMEGA__logger_8hpp.tex  MRAC__OMEGA__logger_8hpp__dep__incl.md5  MRAC__OMEGA__logger_8hpp__incl.md5  MRAC__OMEGA__members_8hpp.tex  MRAC__OMEGA__members_8hpp__dep__incl.md5  MRAC__OMEGA__members_8hpp__incl.md5  MRAC__PID_8cpp.tex  MRAC__PID_8cpp__incl.md5  MRAC__PID_8hpp.tex  MRAC__PID_8hpp__dep__incl.md5  MRAC__PID_8hpp__incl.md5  MRAC__PID__logger_8cpp.tex  MRAC__PID__logger_8cpp__incl.md5  MRAC__PID__logger_8hpp.tex  MRAC__PID__logger_8hpp__dep__incl.md5  MRAC__PID__logger_8hpp__incl.md5  MRAC__PID__members_8hpp.tex  MRAC__PID__members_8hpp__dep__incl.md5  MRAC__PID__members_8hpp__incl.md5  PID_8cpp.tex  PID_8cpp__incl.md5  PID_8hpp.tex  PID_8hpp__dep__incl.md5  PID_8hpp__incl.md5  PID__OMEGA_8cpp.tex  PID__OMEGA_8cpp__incl.md5  PID__OMEGA_8hpp.tex  PID__OMEGA_8hpp__dep__incl.md5  PID__OMEGA_8hpp__incl.md5  PID__OMEGA__logger_8cpp.tex  PID__OMEGA__logger_8cpp__incl.md5  PID__OMEGA__logger_8hpp.tex  (+348 more)
src/acsl_flight/: CMakeLists.txt  package.xml
src/acsl_flight/include/control/: control.hpp  control_config.hpp
src/acsl_flight/include/flight_bridge/: flight_bridge.hpp
src/acsl_flight/include/flight_main/: flight_main.hpp
src/acsl_flight/include/flight_params/: flight_params.hpp
src/acsl_flight/include/mocap/: mocap.hpp
src/acsl_flight/include/mocap/io_context/: io_context.hpp
src/acsl_flight/include/mocap/udp_driver/: udp_driver.hpp
src/acsl_flight/include/mocap/udp_socket/: udp_socket.hpp
src/acsl_flight/include/piecewise_polynomial_trajectory/: piecewise_polynomial_trajectory.hpp
src/acsl_flight/include/read_pix/: read_pix.hpp
src/acsl_flight/include/utils/: helper_functions.hpp
src/acsl_flight/include/utils/adaptive_laws/: projection_operator.hpp
src/acsl_flight/include/utils/control_algorithm_base/: control_algorithm_base.hpp
src/acsl_flight/include/utils/flight_log/: flight_log.hpp
src/acsl_flight/include/utils/flightstack_helpers/: global_helpers.hpp  helper_functions.hpp  px4_defines.hpp
src/acsl_flight/include/utils/lyapunov_solver/: continuous_lyapunov_equation.cpp  continuous_lyapunov_equation.hpp
src/acsl_flight/include/utils/user_defined_trajectory_base/: user_defined_trajectory_base.hpp
src/acsl_flight/include/vehicle_class/: vehicle_class.hpp
src/acsl_flight/include/vio/: vio.hpp
src/acsl_flight/params/control_algorithms/qrbp/MRAC_OMEGA/: gains_MRAC_OMEGA.json
src/acsl_flight/params/control_algorithms/qrbp/MRAC_PID/: gains_MRAC_PID.json
src/acsl_flight/params/control_algorithms/qrbp/PID/: gains_PID.json
src/acsl_flight/params/control_algorithms/qrbp/PID_OMEGA/: gains_PID_OMEGA.json
src/acsl_flight/params/control_algorithms/rostestdrone/PID/: gains_PID.json
src/acsl_flight/params/flight_params/: flight_main_params.json
src/acsl_flight/params/user_defined_trajectory/: forward_trajectory_0p34.json  forward_trajectory_0p38.json  forward_trajectory_0p4.json  forward_trajectory_0p5.json  transition_trajectory_0p5.json  transition_trajectory_0p52.json  transition_trajectory_0p54.json  transition_trajectory_0p56.json  transition_trajectory_0p58.json  transition_trajectory_0p6.json
src/acsl_flight/src/control/: control.cpp
src/acsl_flight/src/flight_bridge/: flight_bridge.cpp
src/acsl_flight/src/flight_main/: flight_main.cpp
src/acsl_flight/src/flight_params/: flight_params.cpp
src/acsl_flight/src/mocap/: mocap.cpp
src/acsl_flight/src/mocap/io_context/: io_context.cpp
src/acsl_flight/src/mocap/udp_driver/: udp_driver.cpp
src/acsl_flight/src/mocap/udp_socket/: udp_socket.cpp
src/acsl_flight/src/piecewise_polynomial_trajectory/: piecewise_polynomial_trajectory.cpp
src/acsl_flight/src/read_pix/: read_pix.cpp
src/acsl_flight/src/vehicle_class/: vehicle_class.cpp
src/acsl_flight/src/vio/: vio.cpp
src/px4_msgs/: README.md
utils/: remove_logs.sh  start_flight.sh  start_uxrce.sh
